--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
     <script src="js/script.js" defer></script>
 </head>
 <body>
+
+    <div class="container">
+        <div class="menu">
+            <input  class="with" type="text" placeholder="Выберите размер ширины поля" size="40">
+            <input  class="height" type="text" placeholder="Выберите размер высоты поля" size="40">
+            <input  class="bombs" type="text" placeholder="Выберите размер кол-во бомб поля" size="40">
+
+            <button class="begingame" type="button">Начать игру</button>
+
+            <p class="points"></p>
+        </div>
+    </div>
+
     <div class="table"></div>
 </body>
 </html>
